# cargo-inspect

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  example.rs
.github/workflows/: ci.yml
examples/: debug.rs  file.rs  if_let.rs  range.rs  range_inclusive.rs  sum.rs  traits.rs
examples/error-cases/: closures.rs  threads.rs
src/: comment.rs  config.rs  diff.rs  errors.rs  format.rs  highlight.rs  hir.rs  lib.rs  tmpfile.rs
