[package]
authors = [
    "Matthias Endler <matthias-endler@gmx.net>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "This extends Cargo to allow you to desugar your Rust code and see what happens behind the curtains."
documentation = "https://github.com/mre/cargo-inspect/blob/master/README.md"
edition = "2018"
homepage = "https://github.com/mre/cargo-inspect"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "unpretty",
    "inspect",
]
license = "Apache-2.0/MIT"
name = "cargo-inspect"
readme = "README.md"
repository = "https://github.com/mre/cargo-inspect"
version = "0.10.0"

[[bin]]
name = "cargo-inspect"
path = "src/bin/inspect/main.rs"

[dependencies]
failure = "0.1.3"
structopt = "0.2.13"
syntect = "3.0.1"
prettyprint = "0.4.0"
indicatif = "0.10.3"
tempfile = "3.0.5"
log = "0.4.6"
env_logger = "0.6.0"
difference = "2.0.0"
ansi_term = "0.11.0"
